--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@chakra-ui/nuxt": "^0.3.3",
+    "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
     "@nuxtjs/emotion": "^0.1.0",
+    "@vue/composition-api": "^1.0.0-rc.13",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
