--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@chakra-ui/nuxt": "^0.3.3",
+    "@inniti/vue-horizontal-scroller": "^1.1.1",
     "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
     "@nuxtjs/emotion": "^0.1.0",
     "@vue/composition-api": "^1.0.0-rc.13",
