--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "storyblok-nuxt": "^2.0.1"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.0",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
+    "fibers": "^5.0.0",
     "jest": "^27.0.5",
+    "sass": "^1.35.2",
+    "sass-loader": "10",
     "vue-jest": "^3.0.4"
   }
 }
