--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@inniti/vue-horizontal-scroller": "^1.1.1",
     "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
     "@nuxtjs/emotion": "^0.1.0",
+    "@vue-stripe/vue-stripe": "^4.2.5",
     "@vue/composition-api": "^1.0.0-rc.13",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
@@ -29,6 +30,7 @@
     "jest": "^27.0.5",
     "sass": "^1.35.2",
     "sass-loader": "10",
+    "stripe": "^8.161.0",
     "vue-jest": "^3.0.4"
   }
 }
